--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -532,16 +532,15 @@ proc initStateTermColumns {} {
 proc initStateShellType {} {
    switch -- [getState shell] {
       sh - bash - ksh - zsh {
-         set shelltype sh
+         return sh
       }
       csh - tcsh {
-         set shelltype csh
+         return csh
       }
       default {
-         set shelltype [getState shell]
+         return [getState shell]
       }
    }
-   return $shelltype
 }
 
 # Get all groups of user running modulecmd.tcl process
